# teensygrad

./: '  .gitignore  CMakeLists.txt  Makefile  README.md  example  t.py  test.py
examples/: mnist.c  tensor_example.c
include/: teensygrad.h  tensor.h
src/: graph.c  op.c  optimizers.c  shape.c  tensor.c  tuple.c
teensygrad/: graph.c  op.c  shape.c  teensygrad.h  tensor.c
teensygrad/nn/: optimizers.c
